# rl-travel-env

./: .gitignore  README.md  eval.py  notes.md  plan.md  pyproject.toml  viz.py
scripts/: _lib.sh  test_00_imports.sh  test_01_pytest.sh  test_02_happy_path.sh  test_03_baseline_inspect.sh  test_04_full_eval.sh  test_05_llm_persona.sh  test_06_llm_rollout.sh  test_07_llm_judge.sh  test_all.sh  viz_01_help.sh  viz_02_random_fast.sh  viz_03_cheapest.sh  viz_04_heuristic_disruption.sh  viz_05_heuristic_llm_persona.sh  viz_06_llm_agent.sh
tests/: conftest.py  test_baselines.py  test_env.py  test_persona.py  test_reward.py  test_world.py
travel_env/: __init__.py  baselines.py  env.py  persona.py  reward.py  rollout.py  world.py  world_data.py
